fixed nav wrapping issue ~60-70em screen width

--- a/style/sass/partials/public/_navigation.scss
+++ b/style/sass/partials/public/_navigation.scss
@@ -119,10 +119,16 @@
   }
 
   .nav {
+    width: 80%;
+    align-items: center;
+    justify-content: center;
     text-transform: uppercase;
     font-size: .75rem;
     font-weight: 600;
     display: block;
+    li {
+      flex: 0 0 auto;
+    }
     a, .has-dropdown, .has-dropup {
       color: $gray;
       text-decoration: none;
@@ -134,10 +140,14 @@
       padding: 32px 20px;
     }
     &-home {
-      display: inline-block;
+      display: flex;
+      flex-direction: row;
+      width: 80%;
       transform: translateX(-50%);
       -webkit-transform: translateX(-50%);
       li {
+        display: block;
+        flex: 0 1 auto;
         margin-left: 1px;
         background-color: white;
         a, .has-dropup {
